--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import HamburgerMenuIcon from "../components/icons/HamburgerMenuIcon.astro";
+
 interface Props {
 	title: string;
 }
@@ -13,38 +15,25 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<main>
+			<div class="row fixed right-16 top-16 z-10 hidden gap-10 rounded-full bg-gray-100/50 px-10 py-5 backdrop-blur-md lg:flex">
+				<span class="underline">Home</span>
+				<span>Projects</span>
+				<span>Product Engineer Roadmap</span>
+				<span>Frontend articles</span>
+			</div>
+			<div class="row fixed right-8 top-8 z-10 flex items-center gap-5 rounded-full bg-gray-100/50 px-5 py-2.5 backdrop-blur-md lg:hidden">
+				<span>Home</span>
+				<HamburgerMenuIcon />
+			</div>
+			<slot />
+		</main>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
