feat: animate scroll message

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import DoubleArrowDownIcon from "../components/icons/DoubleArrowDownIcon.astro";
 			<h1>a Product Frontend Engineer</h1>
 			<span>based in A Coruña, Spain</span>
 		</div>
-		<div class="absolute bottom-20 left-1/2 flex flex-col items-center gap-2">
+		<div class="absolute bottom-10 left-1/2 flex flex-col items-center gap-2 animate-bounce">
 			<span>Scroll for more</span>
 			<DoubleArrowDownIcon />
 		</div>
