--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import HamburgerMenuIcon from "../components/icons/HamburgerMenuIcon.astro";
+import ExternalLinkIcon from "../components/icons/ExternalLinkIcon.astro";
 
 interface Props {
 	title: string;
@@ -26,13 +27,19 @@ const { title } = Astro.props;
 			<div class="row fixed right-16 top-16 z-10 hidden gap-10 rounded-full bg-gray-100/50 px-10 py-5 backdrop-blur-md lg:flex">
 				<span class="underline">Home</span>
 				<span>Projects</span>
-				<span>Product Engineer Roadmap</span>
-				<span>Frontend articles</span>
+				<a class="flex gap-2 items-center" target="_blank" href="https://juanotalora.notion.site/From-Junior-Frontend-Developer-to-Senior-Product-Engineer-1144a54a87be80c6b4f9c48ebece1242">
+					<span>Product Engineer Roadmap</span>
+					<ExternalLinkIcon />
+				</a>
+				<a class="flex gap-2 items-center" target="_blank" href="https://medium.com/@juanoa">
+					<span>Frontend articles</span>
+					<ExternalLinkIcon />
+				</a>
 			</div>
-			<div class="row fixed right-8 top-8 z-10 flex items-center gap-5 rounded-full bg-gray-100/50 px-5 py-2.5 backdrop-blur-md lg:hidden">
+			<a class="row fixed right-8 top-8 z-10 flex items-center gap-5 rounded-full bg-gray-100/50 px-5 py-2.5 backdrop-blur-md lg:hidden">
 				<span>Home</span>
 				<HamburgerMenuIcon />
-			</div>
+			</a>
 			<slot />
 		</main>
 	</body>
