chore: update link to handbook

--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -8,10 +8,7 @@ import NavbarLink from "./NavbarLink.astro";
 >
   <NavbarLink label="Home" to="/" />
   <span class="cursor-no-drop">Projects</span>
-  <NavbarLink
-    to="https://juanotalora.notion.site/From-Junior-Frontend-Developer-to-Senior-Product-Engineer-1144a54a87be80c6b4f9c48ebece1242"
-    label="Product Engineer Roadmap"
-  />
+  <NavbarLink to="https://frontendengineerhandbook.notion.site/" label="Frontend Engineer Handbook" />
   <NavbarLink to="https://medium.com/@juanoa" label="Frontend articles" />
 </div>
 <div
