--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from "../components/navbar/Navbar.astro";
+import "../styles/global.css";
 interface Props {
   title: string;
 }
