fix: update link to Frontend Engineer Handbook

--- a/src/components/navbar/Navbar.astro
+++ b/src/components/navbar/Navbar.astro
@@ -8,7 +8,7 @@ import NavbarLink from "./NavbarLink.astro";
 >
   <NavbarLink label="Home" to="/" />
   <span class="cursor-no-drop">Projects</span>
-  <NavbarLink to="https://frontendengineerhandbook.notion.site/" label="Frontend Engineer Handbook" />
+  <NavbarLink to="https://frontendhandbook.engineer/" label="Frontend Engineer Handbook" />
   <NavbarLink to="https://medium.com/@juanoa" label="Frontend articles" />
 </div>
 <div
