--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -4,31 +4,30 @@
 
 /* Dark mode colors. */
 :root {
-  --sl-color-accent-low: #331f00;
-  --sl-color-accent: #8f5e00;
-  --sl-color-accent-high: #ecc086;
-  --sl-color-white: #ffffff;
-  --sl-color-gray-1: #f2ede4;
-  --sl-color-gray-2: #cdc8bd;
-  --sl-color-gray-3: #aea38d;
-  --sl-color-gray-4: #615743;
-  --sl-color-gray-5: #403724;
-  --sl-color-gray-6: #2f2513;
-  --sl-color-black: #1c180f;
+	--sl-color-accent-low: #242424;
+	--sl-color-accent: #6a6a6a;
+	--sl-color-accent-high: #c8c8c8;
+	--sl-color-white: #ffffff;
+	--sl-color-gray-1: #eeeeee;
+	--sl-color-gray-2: #c2c2c2;
+	--sl-color-gray-3: #8b8b8b;
+	--sl-color-gray-4: #585858;
+	--sl-color-gray-5: #383838;
+	--sl-color-gray-6: #272727;
+	--sl-color-black: #181818;
 }
-
 /* Light mode colors. */
 :root[data-theme='light'] {
-  --sl-color-accent-low: #f2d1a6;
-  --sl-color-accent: #724a00;
-  --sl-color-accent-high: #462c00;
-  --sl-color-white: #1c180f;
-  --sl-color-gray-1: #2f2513;
-  --sl-color-gray-2: #403724;
-  --sl-color-gray-3: #615743;
-  --sl-color-gray-4: #958a75;
-  --sl-color-gray-5: #c7c1b6;
-  --sl-color-gray-6: #f2ede4;
-  --sl-color-gray-7: #f8f6f1;
-  --sl-color-black: #ffffff;
+	--sl-color-accent-low: #d7d7d7;
+	--sl-color-accent: #6b6b6b;
+	--sl-color-accent-high: #323232;
+	--sl-color-white: #181818;
+	--sl-color-gray-1: #272727;
+	--sl-color-gray-2: #383838;
+	--sl-color-gray-3: #585858;
+	--sl-color-gray-4: #8b8b8b;
+	--sl-color-gray-5: #c2c2c2;
+	--sl-color-gray-6: #eeeeee;
+	--sl-color-gray-7: #f6f6f6;
+	--sl-color-black: #ffffff;
 }
