fix: add images to redes-sociales post

--- a/src/components/ui/Image.astro
+++ b/src/components/ui/Image.astro
@@ -23,7 +23,7 @@ const { caption, class: className, ...imageProps } = Astro.props;
 
 <style>
   .image-wrapper {
-    margin: 50px auto;
+    margin: 2rem auto;
   }
 
   .image-image {
